schema/testdata/validation_where_mismatched_operator_for_matching_lhs_rhs/schema.keel
model Profile {
    fields {
        username Text
    }

    @permission(
        expression: profile.username >= "adaam2",
        actions: [get]
    )
}
